syntax = "proto3";

option go_package = "./;proto";

package proto;

service Ens {
  rpc ResolveAddresses(ResolveAddressesRequest) returns (ResolveResponse);
  rpc ResolveDomains(ResolveDomainsRequest) returns (ResolveResponse);
}

message ResolveAddressesRequest {
  repeated string domains = 1;
}

message ResolveDomainsRequest {
  repeated string addresses = 1;
}

message Address {
  string ens_name = 1;
  string address = 2;
}

message ResolveResponse {
  repeated Address addresses = 1;
}
